--- a/_includes/common/metadata.liquid
+++ b/_includes/common/metadata.liquid
@@ -1,12 +1,5 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6Y8EJQN0N"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-Q6Y8EJQN0N');
-</script>
+<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101285670);</script>
+<script async src="//static.getclicky.com/js"></script>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=no">
 <meta name="description" content="{{ description }}">
