--- a/_includes/common/metadata.liquid
+++ b/_includes/common/metadata.liquid
@@ -1,3 +1,5 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=no">
 <meta name="description" content="{{ description }}">
