--- a/_includes/templates/sidebar.liquid
+++ b/_includes/templates/sidebar.liquid
@@ -3,7 +3,7 @@
         <div class="header d-flex flex-column p-3 text-center">
             <div class="title pb-1">
                 <a class="h4 no-underline py-1 px-2 rounded-1" href="{{ site.baseurl }}/" title="{{ site.description }}">
-                    <i class="fa fa-home"></i> {{ site.title }}
+                    <span class="material-icons">home</span> {{ site.title }}
                 </a>
             </div>
             <span class="version">{{ docs.latest_release.name }}</span>
