--- a/_includes/templates/breadcrumbs.liquid
+++ b/_includes/templates/breadcrumbs.liquid
@@ -2,7 +2,7 @@
     <ul class="breadcrumb" role="navigation" aria-label="breadcrumbs navigation">
         <li class="breadcrumb-item">
             <a class="no-underline" href="{{ site.baseurl }}/" title="{{ docs.source.path }}">
-                <i class="fa fa-home"></i>
+                <span class="material-icons">home</span>
             </a>
         </li>
         {%- case page.url -%}
